# product-uploader

./: .gitignore  CLAUDE.md  README.md  output.txt  pyproject.toml  requirements.txt
.claude/: settings.local.json  stage-state.json
.claude/commands/: stage.md
.claude/stages/design/: README.md  prd-v1.md  prd-v2.md  prd-v3.md
.claude/stages/dev/: README.md
.claude/stages/req/: README.md  mrd-v1.md  mrd-v2.md  mrd-v3.md
.claude/stages/test/: README.md
data/recordings/: rec_20260130_141917.py  rec_20260130_143140.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
src/: __init__.py  main.py
src/cli/: __init__.py  shell.py  ui.py
src/cli/flows/: __init__.py  base.py  (+4 more)
src/core/: __init__.py  collector.py  events.py  filler.py  learning_engine.py
src/infra/: __init__.py  browser.py  logger.py
src/models/: __init__.py  binding.py  problem.py  product.py  result.py  solution.py
user_data/: Last Browser  Local State
user_data/Crashpad/: metadata
user_data/Default/: BrowsingTopicsState  DIPS  DIPS-wal  Favicons  History  Network Action Predictor  Preferences  Secure Preferences  Top Sites  Visited Links  Web Data  passkey_enclave_state
user_data/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  f_00000e  f_00000f  f_000010  f_000011  index
user_data/GraphiteDawnCache/: data_1  index
user_data/ShaderCache/: data_0  data_1  data_2  index
user_data/segmentation_platform/: ukm_db
(+763 files in other folders)
